--- a/software/index.html
+++ b/software/index.html
@@ -88,13 +88,21 @@
   <li><a href="http://www.securelogix.com/modemscanner/">TeleSweep</a></li>
 </ul>
 
-<h2 id="historical-projects">Historical Projects</h2>
+<h2 id="historical-projects-available">Historical Projects (Available)</h2>
 
 <ul>
   <li><a href="http://en.wikipedia.org/wiki/ToneLoc">ToneLoc</a> [ DOS ]</li>
   <li><a href="http://csdb.dk/release/?id=58069">Phone Man</a> [ C64 ]</li>
   <li><a href="http://www.0xdeadbeef.info/code/ward.c">ward.c</a> [ Linux ]</li>
 </ul>
+
+<h2 id="historical-projects-missing">Historical Projects (Missing)</h2>
+
+<ul>
+  <li>ShokDial</li>
+  <li>TkScan</li>
+</ul>
+
 
   </article>
 
