--- a/datasets/index.html
+++ b/datasets/index.html
@@ -76,10 +76,17 @@
   <li>Michael R. Wally released a collection of <a href="http://s3.amazonaws.com/wardial/">3 million toll-free calls</a>. This is a <a href="http://docs.aws.amazon.com/AmazonS3/latest/dev/RequesterPaysBuckets.html">requester-pays</a> bucket of WAV files compressed with 7zip and split into blocks of 10,000.</li>
 </ul>
 
-<h2 id="directories">Directories</h2>
+<h2 id="archived-scans">Archived Scans</h2>
+<ul>
+  <li><a href="http://packetstormsecurity.com/groups/9x/">9x Scans</a></li>
+</ul>
+
+<h2 id="payphone-directories">Payphone Directories</h2>
 
 <ul>
   <li><a href="http://www.payphone-directory.org/">El Jefe’s Payphone Directory</a></li>
+  <li><a href="http://www.payphone-project.com/numbers/">The Payphone Project</a></li>
+  <li><a href="http://www.mcpayphone.com/">McPayphone</a></li>
 </ul>
 
   </article>
