--- a/publications/index.html
+++ b/publications/index.html
@@ -84,7 +84,7 @@
 <h2 id="videos">Videos</h2>
 <ul>
   <li><a href="http://www.bbsdocumentary.com/">The BBS Documentary</a></li>
-  <li><a href="https://www.youtube.com/watch?v=UDIPVmPEqjc">Unauthorized Access</a>)</li>
+  <li><a href="https://www.youtube.com/watch?v=UDIPVmPEqjc">Unauthorized Access</a></li>
 </ul>
 
   </article>
