--- a/publications/index.html
+++ b/publications/index.html
@@ -79,6 +79,7 @@
 <ul>
   <li><a href="http://www.amazon.com/gp/product/080212061X/">Exploding the Phone</a></li>
   <li><a href="http://www.amazon.com/dp/B004E10X6M/">Phone Losers of America</a></li>
+  <li><a href="http://www.amazon.com/dp/0316037702">Ghost in the Wires</a></li>
 </ul>
 
 <h2 id="videos">Videos</h2>
