--- a/datasets/index.html
+++ b/datasets/index.html
@@ -88,6 +88,13 @@
   <li><a href="http://packetstormsecurity.com/groups/9x/">9x Scans</a></li>
 </ul>
 
+<h2 id="reverse-lookup-services">Reverse Lookup Services</h2>
+<ul>
+  <li><a href="http://www.opencnam.us">OpenCNAM</a>. Provides both cached and on-demand CNAM dips for a low fee.</li>
+  <li><a href="http://www.alcazarnetworks.com/data_services_lnp_lrn.php">Alcazar Networks</a>. Provides LNP/LNR lookups for a low fee.</li>
+  <li><a href="http://www.spydialer.com/">Spy Dialer</a>. Provides on-demand CNAM and voicemail audio.</li>
+</ul>
+
 <h2 id="payphone-directories">Payphone Directories</h2>
 
 <ul>
