--- a/publications/index.html
+++ b/publications/index.html
@@ -86,6 +86,7 @@
 <ul>
   <li><a href="http://www.bbsdocumentary.com/">The BBS Documentary</a></li>
   <li><a href="https://www.youtube.com/watch?v=UDIPVmPEqjc">Unauthorized Access</a></li>
+  <li><a href="https://www.youtube.com/watch?v=EnjyIcwFv-A">Hacking International Networks and Systems via VoIP</a></li>
 </ul>
 
 <h2 id="blog-posts">Blog Posts</h2>
